objects/SVMXC__Service_Group_Skills__c.object
<CustomObject>
    <fields>
        <fullName>SVMX_PS_Certification_Type__c</fullName>
        <label>Certification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>OTJ - On The Job</fullName>
                    <label>OTJ - On the Job</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Expertise_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Expertise External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMX_PS_Source_System__c</fullName>
        <description>What is the source of this information SAP, LMS...</description>
        <inlineHelpText>What is the source of this information SAP, LMS...</inlineHelpText>
        <label>Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>